# hermes

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE  README.md  hermes
assets/: README.md
boot/: CMakeLists.txt  boot.s
kernel/: CMakeLists.txt  linker.ld
kernel/kernel/: console.c  hermes.c  main.c
kernel/kernel/drivers/: graphics.c  mbox.c  mmio.c  uart.c
kernel/kernel/hermes/: memory.c  string.c  system.c  utilities.c
kernel/lib/: console.h  debug.h  hermes.h
kernel/lib/drivers/: graphics.h  mbox.h  mmio.h  uart.h
kernel/lib/hermes/: memory.h  string.h  system.h  utilities.h
scripts/: clean.sh  emulator.sh  run.sh
